--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "doc": "NODE_DEBUG=doc doc documentary -o README.md",
     "b": "alamode src -o build",
     "d": "yarn-s d1",
-    "d1": "NODE_DEBUG=doc doc src/index.js -g",
+    "d1": "NODE_DEBUG=doc doc src/api/repos/create.js -g",
     "build": "yarn-s d b doc",
     "rec": "NODE_DEBUG=appshot appshot -T 23 -a Terminal -y 150 -f",
     "e": "node example",
@@ -38,9 +38,13 @@
   "homepage": "https://github.com/rqt/github#readme",
   "devDependencies": {
     "alamode": "1.5.1",
+    "bosom": "1.0.0",
     "documentary": "1.20.1",
     "eslint-config-artdeco": "1.0.1",
     "yarn-s": "1.1.0",
     "zoroaster": "3.5.1"
+  },
+  "dependencies": {
+    "rqt": "3.0.0"
   }
 }
