--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "mask": "yarn t test/mask",
     "test-build": "ALAMODE_ENV=test-build yarn test",
     "lint": "eslint .",
-    "doc": "NODE_DEBUG=doc doc documentary -o README.md",
+    "doc": "NODE_DEBUG=doc doc -o README.md",
     "b": "alamode src -o build",
     "d": "yarn-s d1",
     "d1": "NODE_DEBUG=doc doc src/api/repos/create.js -g",
     "build": "yarn-s d b doc",
-    "rec": "NODE_DEBUG=appshot appshot -T 23 -a Terminal -y 150 -f",
     "e": "node example",
     "example/": "yarn e example/example.js"
   },
@@ -39,14 +38,14 @@
   },
   "homepage": "https://github.com/rqt/github#readme",
   "devDependencies": {
-    "alamode": "1.5.1",
-    "bosom": "1.0.0",
-    "documentary": "1.20.1",
+    "alamode": "^2.4.0",
+    "bosom": "^2.0.0",
+    "documentary": "^1.32.1",
     "eslint-config-artdeco": "1.0.1",
     "yarn-s": "1.1.0",
-    "zoroaster": "3.5.1"
+    "zoroaster": "^4.1.1-alpha"
   },
   "dependencies": {
-    "rqt": "3.0.0"
+    "rqt": "^4.0.0"
   }
 }
