--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test-build": "ALAMODE_ENV=test-build yarn test",
     "lint": "eslint .",
     "doc": "NODE_DEBUG=doc doc -o README.md",
-    "b": "alamode src -o build",
+    "b": "alamode src -o build -s",
     "d": "yarn-s d1",
     "d1": "NODE_DEBUG=doc doc src/api/repos/create.js -g",
     "build": "yarn-s d b doc",
@@ -38,9 +38,9 @@
   },
   "homepage": "https://github.com/rqt/github#readme",
   "devDependencies": {
-    "alamode": "^3.0.0",
+    "alamode": "^3.2.0",
     "bosom": "^2.0.0",
-    "documentary": "^1.33.0",
+    "documentary": "^1.34.1",
     "eslint-config-artdeco": "1.0.1",
     "yarn-s": "1.1.0",
     "zoroaster": "^4.1.2"
