--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "b": "alamode src -o build -s",
     "d": "yarn-s d1",
     "d1": "NODE_DEBUG=doc doc src/api/repos/create.js -g",
+    "d2": "typal src/api/repos/index.js -u",
     "build": "yarn-s d b doc",
     "e": "node example",
     "example/": "yarn e example/example.js"
