add github pages

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "mask": "yarn t test/mask",
     "test-build": "ALAMODE_ENV=test-build yarn test",
     "lint": "eslint .",
-    "doc": "NODE_DEBUG=doc doc -o README.md",
+    "doc": "NODE_DEBUG=doc doc -o README.md -n _github",
     "b": "alamode src -o build -s",
-    "d": "yarn-s d1",
+    "d": "yarn-s d2",
     "d1": "NODE_DEBUG=doc doc src/api/repos/create.js -g",
-    "d2": "typal src/api/repos/index.js -u",
+    "d2": "typal src/api/repos/index.js src/api/pages/index.js -u",
     "build": "yarn-s d b doc",
     "e": "node example",
     "example/": "yarn e example/example.js"
