--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "mask": "yarn t test/mask",
     "test-build": "ALAMODE_ENV=test-build yarn test",
     "lint": "eslint .",
+    "stdlib": "depack src/stdlib -o stdlib/index.js -a -c -p -s",
     "doc": "NODE_DEBUG=doc doc -o README.md -n _github",
     "b": "alamode src -o build -s",
-    "d": "yarn-s d2",
-    "d1": "NODE_DEBUG=doc doc src/api/repos/create.js -g",
-    "d2": "typal src/api/repos/index.js src/api/pages/index.js -u",
+    "d": "yarn-s d1 d2 externs",
+    "d1": "typal types/index.js -u",
+    "d2": "typal src/api -t types/api -u",
+    "externs": "typal types/externs.js -e",
     "build": "yarn-s d b doc",
     "e": "node example",
     "example/": "yarn e example/example.js"
@@ -39,14 +41,15 @@
   },
   "homepage": "https://github.com/rqt/github#readme",
   "devDependencies": {
+    "@rqt/aqt": "^1.3.0",
     "alamode": "^3.2.0",
     "bosom": "^2.0.0",
+    "depack": "^1.0.0",
     "documentary": "^1.34.1",
+    "erotic": "^2.1.1",
     "eslint-config-artdeco": "1.0.1",
+    "rqt": "^4.0.0",
     "yarn-s": "1.1.0",
     "zoroaster": "^4.1.2"
-  },
-  "dependencies": {
-    "rqt": "^4.0.0"
   }
 }
