--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint .",
     "stdlib": "depack src/stdlib -o stdlib/index.js -a -c -p -s",
     "doc": "NODE_DEBUG=doc doc -o README.md -n _github",
-    "b": "alamode src -o build -s",
+    "b": "alamode src -o build -i stdlib.js -s",
     "d": "yarn-s d1 d2 externs",
     "d1": "typal types/index.js -u",
     "d2": "typal src/api -t types/api -u",
@@ -22,7 +22,8 @@
     "example/": "yarn e example/example.js"
   },
   "files": [
-    "build"
+    "build",
+    "stdlib"
   ],
   "repository": {
     "type": "git",
@@ -44,6 +45,7 @@
     "@rqt/aqt": "^1.3.0",
     "alamode": "^3.2.0",
     "bosom": "^2.0.0",
+    "catchment": "^3.3.0",
     "depack": "^1.0.0",
     "documentary": "^1.34.1",
     "erotic": "^2.1.1",
